--- a/sql-quiz.html
+++ b/sql-quiz.html
@@ -93,8 +93,7 @@
 
     // ✅ Add your authorized email addresses here
     const authorizedEmails = [
-      "yourmail@gmail.com",  // Replace with your actual allowed emails
-      "testmember@example.com"
+      "rajeshumrao95@gmail.com",  // Replace with your actual allowed emails
     ];
 
     // Login function
@@ -145,3 +144,4 @@
   </script>
 </body>
 </html>
+
