--- a/sql-quiz.html
+++ b/sql-quiz.html
@@ -1,147 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Protected SQL Quiz</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>🧠 SQL Basics Quiz (Members Only)</title>
 
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+<!-- Firebase SDKs -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
 
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      padding: 40px;
-      text-align: center;
-    }
-    #login-box, #quiz-box, #logout-btn {
-      background: white;
-      padding: 25px;
-      margin: 15px auto;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      max-width: 400px;
-    }
-    input, button {
-      padding: 10px;
-      margin: 8px;
-      width: 90%;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    button {
-      cursor: pointer;
-      background: #1976d2;
-      color: white;
-      border: none;
-    }
-    button:hover {
-      background: #0d47a1;
-    }
-    #quiz-box { display: none; }
-    #logout-btn { display: none; margin-top: 10px; }
-  </style>
+<style>
+  body { font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 0; padding: 20px; }
+  h1 { text-align: center; }
+  .question { background: white; padding: 15px; margin-bottom: 15px; border-radius: 8px; }
+  .feedback { display: none; font-weight: bold; margin-top: 10px; }
+  .correct { color: green; }
+  .wrong { color: red; }
+  button { margin-top: 10px; background-color: #007BFF; color: white; border: none; padding: 6px 10px; border-radius: 5px; cursor: pointer; }
+  button:hover { background-color: #0056b3; }
+
+  #login-box, #logout-btn { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 8px rgba(0,0,0,0.1); max-width: 350px; margin: 20px auto; }
+  #quiz-container { display: none; }
+  #logout-btn { display: none; margin: 20px auto; display: block; }
+  input[type="email"], input[type="password"] {
+    width: 90%; padding: 10px; margin: 8px 0; border: 1px solid #ccc; border-radius: 5px;
+  }
+</style>
 </head>
-
 <body>
-  <h2>🔒 SQL Quiz (Members Only)</h2>
 
-  <!-- Login Form -->
-  <div id="login-box">
-    <h3>Login</h3>
-    <input type="email" id="email" placeholder="Enter Email" /><br>
-    <input type="password" id="password" placeholder="Enter Password" /><br>
-    <button onclick="login()">Login</button>
+<h1>🔒 SQL Basics Quiz</h1>
+
+<!-- 🔐 Login Box -->
+<div id="login-box">
+  <h3>Login to Access the Quiz</h3>
+  <input type="email" id="email" placeholder="Enter Email"><br>
+  <input type="password" id="password" placeholder="Enter Password"><br>
+  <button onclick="login()">Login</button>
+</div>
+
+<!-- 🚪 Logout Button -->
+<button id="logout-btn" onclick="logout()">Logout</button>
+
+<!-- 🧠 Quiz Section -->
+<div id="quiz-container">
+  <div class="question">
+    <p><b>Q1.</b> Which SQL statement is used to retrieve data from a database?</p>
+    <label><input type="radio" name="q1" value="A"> GET</label><br>
+    <label><input type="radio" name="q1" value="B"> EXTRACT</label><br>
+    <label><input type="radio" name="q1" value="C"> SELECT</label><br>
+    <label><input type="radio" name="q1" value="D"> READ</label><br>
+    <button onclick="checkAnswer('q1','C','The SELECT statement is used to retrieve data from one or more tables.')">Check Answer</button>
+    <div id="feedback-q1" class="feedback"></div>
   </div>
 
-  <!-- Logout Button -->
-  <button id="logout-btn" onclick="logout()">Logout</button>
-
-  <!-- Quiz Section -->
-  <div id="quiz-box">
-    <h3>SQL Quiz</h3>
-    <form>
-      <p><strong>1.</strong> Which SQL statement is used to extract data from a database?</p>
-      <label><input type="radio" name="q1" value="SELECT"> SELECT</label><br>
-      <label><input type="radio" name="q1" value="EXTRACT"> EXTRACT</label><br>
-      <label><input type="radio" name="q1" value="GET"> GET</label><br>
-
-      <p><strong>2.</strong> Which SQL keyword is used to sort the result-set?</p>
-      <label><input type="radio" name="q2" value="SORT"> SORT</label><br>
-      <label><input type="radio" name="q2" value="ORDER BY"> ORDER BY</label><br>
-      <label><input type="radio" name="q2" value="ARRANGE"> ARRANGE</label><br>
-    </form>
+  <div class="question">
+    <p><b>Q2.</b> What does the SQL keyword <code>DISTINCT</code> do?</p>
+    <label><input type="radio" name="q2" value="A"> Deletes duplicate rows</label><br>
+    <label><input type="radio" name="q2" value="B"> Returns only unique values</label><br>
+    <label><input type="radio" name="q2" value="C"> Sorts results in descending order</label><br>
+    <label><input type="radio" name="q2" value="D"> Filters rows using conditions</label><br>
+    <button onclick="checkAnswer('q2','B','DISTINCT returns only unique (non-duplicate) values from a column or query.')">Check Answer</button>
+    <div id="feedback-q2" class="feedback"></div>
   </div>
 
-  <script>
-    // ✅ Your Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyA7-ewx3UsKHLccXG6wOWk0KLAz-pe9DYg",
-      authDomain: "myquizauthproject.firebaseapp.com",
-      projectId: "myquizauthproject",
-      storageBucket: "myquizauthproject.firebasestorage.app",
-      messagingSenderId: "234128966647",
-      appId: "1:234128966647:web:a0ba36e0e3e767902f64f2",
-      measurementId: "G-DR5KT7B81Q"
-    };
+  <div class="question">
+    <p><b>Q3.</b> Which clause is used to filter rows in a SELECT query?</p>
+    <label><input type="radio" name="q3" value="A"> WHERE</label><br>
+    <label><input type="radio" name="q3" value="B"> FILTER</label><br>
+    <label><input type="radio" name="q3" value="C"> HAVING</label><br>
+    <label><input type="radio" name="q3" value="D"> GROUP BY</label><br>
+    <button onclick="checkAnswer('q3','A','The WHERE clause filters rows based on a condition before grouping or ordering.')">Check Answer</button>
+    <div id="feedback-q3" class="feedback"></div>
+  </div>
 
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
+  <div class="question">
+    <p><b>Q4.</b> Which SQL statement is used to remove all records from a table but keep the table structure?</p>
+    <label><input type="radio" name="q4" value="A"> DELETE</label><br>
+    <label><input type="radio" name="q4" value="B"> DROP</label><br>
+    <label><input type="radio" name="q4" value="C"> TRUNCATE</label><br>
+    <label><input type="radio" name="q4" value="D"> REMOVE</label><br>
+    <button onclick="checkAnswer('q4','C','TRUNCATE removes all rows but keeps the table structure for future use.')">Check Answer</button>
+    <div id="feedback-q4" class="feedback"></div>
+  </div>
 
-    // ✅ Add your authorized email addresses here
-    const authorizedEmails = [
-      "rajeshumrao95@gmail.com",  // Replace with your actual allowed emails
-    ];
+  <div class="question">
+    <p><b>Q5.</b> Which of the following SQL statements will count the number of employees in a table named <code>Employees</code>?</p>
+    <label><input type="radio" name="q5" value="A"> SELECT COUNT(*) FROM Employees;</label><br>
+    <label><input type="radio" name="q5" value="B"> SELECT TOTAL(*) FROM Employees;</label><br>
+    <label><input type="radio" name="q5" value="C"> SELECT NUMBER(*) FROM Employees;</label><br>
+    <label><input type="radio" name="q5" value="D"> COUNT(Employees);</label><br>
+    <button onclick="checkAnswer('q5','A','COUNT(*) returns the total number of rows in a table or result set.')">Check Answer</button>
+    <div id="feedback-q5" class="feedback"></div>
+  </div>
+</div>
 
-    // Login function
-    function login() {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
+<script>
+  // ✅ Firebase Config
+  const firebaseConfig = {
+    apiKey: "AIzaSyA7-ewx3UsKHLccXG6wOWk0KLAz-pe9DYg",
+    authDomain: "myquizauthproject.firebaseapp.com",
+    projectId: "myquizauthproject",
+    storageBucket: "myquizauthproject.firebasestorage.app",
+    messagingSenderId: "234128966647",
+    appId: "1:234128966647:web:a0ba36e0e3e767902f64f2",
+    measurementId: "G-DR5KT7B81Q"
+  };
 
-      auth.signInWithEmailAndPassword(email, password)
-        .then((userCredential) => {
-          const user = userCredential.user;
-          if (authorizedEmails.includes(user.email)) {
-            showQuiz();
-          } else {
-            alert("❌ Unauthorized email address.");
-            auth.signOut();
-          }
-        })
-        .catch((error) => {
-          alert("⚠️ " + error.message);
-        });
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+
+  // ✅ Authorized emails
+  const authorizedEmails = ["rajeshumrao95@gmail.com"];
+
+  function login() {
+    const email = document.getElementById("email").value;
+    const password = document.getElementById("password").value;
+
+    auth.signInWithEmailAndPassword(email, password)
+      .then(userCredential => {
+        const user = userCredential.user;
+        if (authorizedEmails.includes(user.email)) {
+          showQuiz();
+        } else {
+          alert("❌ Unauthorized email. Access denied.");
+          auth.signOut();
+        }
+      })
+      .catch(error => alert("⚠️ " + error.message));
+  }
+
+  function logout() {
+    auth.signOut();
+  }
+
+  auth.onAuthStateChanged(user => {
+    if (user && authorizedEmails.includes(user.email)) {
+      showQuiz();
+    } else {
+      showLogin();
     }
+  });
 
-    // Logout function
-    function logout() {
-      auth.signOut();
+  function showQuiz() {
+    document.getElementById("login-box").style.display = "none";
+    document.getElementById("quiz-container").style.display = "block";
+    document.getElementById("logout-btn").style.display = "block";
+  }
+
+  function showLogin() {
+    document.getElementById("login-box").style.display = "block";
+    document.getElementById("quiz-container").style.display = "none";
+    document.getElementById("logout-btn").style.display = "none";
+  }
+
+  // ✅ Quiz checking function
+  function checkAnswer(q, correct, explanation) {
+    const selected = document.querySelector(`input[name="${q}"]:checked`);
+    const feedback = document.getElementById(`feedback-${q}`);
+    if (!selected) {
+      alert("Please select an answer!");
+      return;
     }
-
-    // Show/hide quiz depending on auth state
-    auth.onAuthStateChanged((user) => {
-      if (user && authorizedEmails.includes(user.email)) {
-        showQuiz();
-      } else {
-        showLogin();
-      }
-    });
-
-    function showQuiz() {
-      document.getElementById("login-box").style.display = "none";
-      document.getElementById("quiz-box").style.display = "block";
-      document.getElementById("logout-btn").style.display = "inline-block";
+    if (selected.value === correct) {
+      feedback.innerHTML = "✅ Correct! " + explanation;
+      feedback.className = "feedback correct";
+    } else {
+      feedback.innerHTML = "❌ Incorrect. " + explanation;
+      feedback.className = "feedback wrong";
     }
+    feedback.style.display = "block";
+  }
+</script>
 
-    function showLogin() {
-      document.getElementById("login-box").style.display = "block";
-      document.getElementById("quiz-box").style.display = "none";
-      document.getElementById("logout-btn").style.display = "none";
-    }
-  </script>
 </body>
 </html>
-
